<resources>
    <string name="app_name">Rubik Square</string>
    <string name="action_reset">Reset</string>
    <string name="action_end_game">End Game</string>
    <string name="fab_content_description">Add or remove the second player</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Player One</string>
    <string name="second_fragment_label">Player Two</string>

    <string name="completion_dialog_title">Congratulations!</string>
    <string name="completion_dialog_message">You have completed the puzzle</string>
    <string name="completion_dialog_positive_text">Reset</string>
</resources>