...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_second_square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:listitem="@layout/rubik_cell"
            tools:itemCount="9"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_second_square"/>

        <FrameLayout
            android:id="@+id/second_touch_blocker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/overlay"
            android:clickable="@{viewModel.whichPlayerTurn == 1}"
            android:visibility="@{viewModel.whichPlayerTurn == 1 ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="@id/rv_second_square"
...
