...
            android:id="@+id/first_fragment"
            android:tag="@string/first_fragment_label"
            android:name="com.motional.rubiksquare.FirstFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/second_fragment"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/second_fragment"
            android:tag="@string/second_fragment_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.numPlayers == 2 ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/first_fragment"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:onClick="@{clickListener}"
            android:contentDescription="@string/fab_content_description"
...
